# flask_prod_api

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
prod_ready_api/: __init__.py  gunicorn_config.py
prod_ready_api/api/: __init__.py  routes.py
tests/: conftest.py  test_routes.py
tests/resources/: mocked_output.py
